--- a/demo/public/index.css
+++ b/demo/public/index.css
@@ -6,6 +6,27 @@ body {
   height: 100%
 }
 
+.shell {
+  position: absolute;
+  bottom:0;
+  top:0;
+  left:0;
+  width: 100%;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+html, body, #root{
+  height: 100%
+}
+
 .loader {
   animation: spin infinite 20s linear;
   height: 80px;
