--- a/demo/public/index.css
+++ b/demo/public/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   padding: 0;
@@ -5,6 +6,8 @@ body {
   background-color: #222;
   height: 100%
 }
+
+/*
 
 .shell {
   position: absolute;
@@ -40,3 +43,4 @@ html, body, #root{
 .oscilloscope {
   border-radius: 30px;
 }
+*/
